@@ -313,8 +313,9 @@ static inline int localeCompare(const UString& a, const UString& b)
 #endif
 }
 
-static JSValue *replace(ExecState *exec, const UString &source, JSValue *pattern, JSValue *replacement)
+static JSValue *replace(ExecState *exec, StringImp* sourceVal, JSValue *pattern, JSValue *replacement)
 {
+  UString source = sourceVal->value();
   JSObject *replacementFunction = 0;
   UString replacementString;
 
@@ -365,7 +366,7 @@ static JSValue *replace(ExecState *exec, const UString &source, JSValue *pattern
           }
           
           args.append(jsNumber(completeMatchStart));
-          args.append(jsString(source));
+          args.append(sourceVal);
 
           substitutedReplacement = replacementFunction->call(exec, exec->dynamicInterpreter()->globalObject(), 
                                                              args)->toString(exec);
@@ -389,11 +390,15 @@ static JSValue *replace(ExecState *exec, const UString &source, JSValue *pattern
       pushSourceRange(sourceRanges, sourceRangeCount, sourceRangeCapacity, UString::Range(lastIndex, source.size() - lastIndex));
 
     UString result;
+
     if (sourceRanges)
         result = source.spliceSubstringsWithSeparators(sourceRanges, sourceRangeCount, replacements, replacementCount);
 
     delete [] sourceRanges;
     delete [] replacements;
+
+    if (result == source)
+      return sourceVal;
 
     return jsString(result);
   }
@@ -404,14 +409,14 @@ static JSValue *replace(ExecState *exec, const UString &source, JSValue *pattern
   int matchLen = patternString.size();
   // Do the replacement
   if (matchPos == -1)
-    return jsString(source);
+    return sourceVal;
   
   if (replacementFunction) {
       List args;
       
       args.append(jsString(source.substr(matchPos, matchLen)));
       args.append(jsNumber(matchPos));
-      args.append(jsString(source));
+      args.append(sourceVal);
       
       replacementString = replacementFunction->call(exec, exec->dynamicInterpreter()->globalObject(), 
                                                     args)->toString(exec);
@@ -562,7 +567,11 @@ JSValue* StringProtoFunc::callAsFunction(ExecState* exec, JSObject* thisObj, con
     break;
   }
   case Replace:
-    result = replace(exec, s, a0, a1);
+    StringImp* sVal = thisObj->inherits(&StringInstance::info) ?
+      static_cast<StringInstance*>(thisObj)->internalValue() :
+      static_cast<StringImp*>(jsString(s));
+
+    result = replace(exec, sVal, a0, a1);
     break;
   case Slice:
     {
